styles/style.css
:root{
    --bg-color: #0d0d0d;
    --light-text: #f2f2f2;
    --hover-color: #426abc;
    --header-color: #233a59;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth; 
}

body {
    font-family: 'Outfit', sans-serif;
    background: linear-gradient(135deg, #0d0d0d, #0f1b2b);
    background-attachment: fixed;
    overflow-x: hidden;
}

body.stop-scroll {
    overflow: hidden;
}

/* Header */

header {
    background: transparent;
    color: var(--light-text);
    backdrop-filter: blur(5px);
    padding: 1rem 2rem;
    position: sticky;
    top: 0;
    z-index: 1000;
    transition: transform 0.3s ease-in-out;
}

nav {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.logo a {
    color: var(--hover-color);
    text-decoration: none;
    font-size: 1.5rem;
    font-weight: bold;
}

.nav-bar {
    list-style: none;
    display: flex;
}

.nav-bar li {
    margin-left: 4rem;
}

.nav-bar a {
    color: var(--light-text);
    text-decoration: none;
    font-size: 1rem;
    transition: color 0.3s ease;
}

/* Hover */

.nav-bar a:hover {
    color: var(--hover-color);
}

/* Mobile menu */
.mobile-menu {
    display: none;
    flex-direction: column;
    cursor: pointer;
}

.mobile-menu .bar {
    width: 25px;
    height: 3px;
    background-color: var(--light-text);
    margin: 4px 0;
}

@media (max-width: 768px) {
    nav {
        justify-content: space-between;
    }

    .nav-bar {
        position: absolute;
        top: 60px;
        right: 0;
        height: 100vh;
        width: 100%;
        font-size: 2.5rem;
        background: linear-gradient(135deg, #0d0d0d, #0f1b2b);
        flex-direction: column;
        align-items: center;
        justify-content: space-evenly;
        transform: translateY(100%);
        transition: transform 0.3s ease-in-out;
    }

    .nav-bar.clicked {
        transform: translateY(0);
    }

    .nav-bar li {
        margin-left: 0rem;
    }

    .nav-bar a {
        font-size: 1.2rem;
    }

    .mobile-menu {
        display: flex;
        flex-direction: column;
        cursor: pointer;
    }

    .nav-bar.active {
        transform: translateX(0);
    }
}

/* Intro */
.intro{
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    max-width: auto;
    height: 100vh;
    margin: auto;
    padding-left: 5%;
    padding-right: 5%;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 5%;
}

/* Animations */
.image-container, .intro-statement {
    opacity: 0;
    transform: translateX(-100px);
    transition: opacity 1s ease-out, transform 1s ease-out;
}

.intro-visible .image-container,
.intro-visible .intro-statement {
    opacity: 1;
    transform: translateX(0);
}

/* Profile pic */
.image-container {
    padding: 2%
}

.profile-pic {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

/* Intro Statement */
.intro-statement {
    max-width: 70%;
    padding: 5%;
    padding-left: 15%;
    transform: translateX(100px)
}

.name h1{
    font-size: 5rem;
    color: var(--hover-color);
    line-height: 2;
    font-weight: 500;
    font-style: italic;
}

.intro-statement h2 {
    font-size: 1.5rem;
    font-weight: 300;
    color: var(--light-text);
    text-align: left;
}

/* Mobile */
@media screen and (max-width: 768px) {
    .name h1 {
        font-size: 3.5rem;
    }

    .intro-statement h2 {
        font-size: 1rem;
    }
}

/* Education */

.education {
    max-width: auto;
    height: auto;
    margin: auto;
    align-items: center;
    padding-top: 2rem; 
    padding-bottom: 5%;
    position: relative;
    /* padding is determined by header */
}

.education-header h1 {
    font-size: 3.5rem;
    color: var(--hover-color);
    line-height: 2;
    font-weight: 500;
    align-items: center;
    text-align: center;
}

.education-header {
    opacity: 0;
}

.education-visible .education-header {
    opacity: 1;
    transition: opacity 1s ease-out;
}

/* Animations */
@keyframes moveline {
    0%{
        height: 0;
    }
    100%{
        height: 100%
    }
}

.left-container {
    left: -2px;
    transform: translateX(-100%);
    opacity: 0;
    transition: transform 1s ease-out, opacity 1s ease-out;
}

.right-container {
    left: 49.85%;
    transform: translateX(100%);
    opacity: 0;
    transition: transform 1s ease-out, opacity 1s ease-out;
}

.education-visible .right-container,
.education-visible .left-container {
    opacity: 1;
    transform: translateX(0);
}

/* Education containers */

.timeline{
    position: relative;
    margin: 50px auto;
}

.timeline::after {
    content:"";
    position: absolute;
    width: 2px;
    height: 100%;
    background: var(--light-text);
    top: 0;
    left: 50%;
    margin-left: -3px;
    z-index: -1;
    
}

.education-visible .timeline::after {
    animation: moveline 0.5s linear forwards;
}

.education-container {
    padding: 10px 50px;
    position: relative; 
    width: 50%;
    height: auto;
}

.education-card {
    padding: 20px 30px;
    position: relative;
    border-radius: 10px;
    background-color: var(--light-text);
}

.education-card h2, .education-card h3 {
    background-color: var(--light-text);
    color: var(--bg-color);  
}

.education-card small {
    display: inline-block;
    margin-top: 0.5rem;
    background-color: var(--light-text);
    color: var(--bg-color);
}

.education-card ul {
    list-style: none;
}

.education-card ul li {
    padding-bottom: 1rem;
    padding-top: 1rem;
    background-color: var(--light-text);
    color: var(--bg-color);
}

.education-card ul li a {
    text-decoration: none;
    background-color: var(--light-text);
    color: var(--hover-color);
}

/* Education Logos */
.education-container img {
    position: absolute;
    width: 40px;
    border-radius: 50%;
    right: -20px;
    top: 32px;
    z-index: 10;
}

.right-container img{
    left: -20px;
}
/* ... */

